--- a/code/eda_round2_data.ipynb
+++ b/code/eda_round2_data.ipynb
@@ -631,6 +631,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 38,
+   "id": "ee752287-e513-439e-9e54-a6a180be8066",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<pandas.core.indexes.accessors.DatetimeProperties object at 0x17f46dd30>"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[\"log_time\"].dt"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 19,
    "id": "7507978d-7e90-4158-a2d9-e478aae31c0e",
    "metadata": {
@@ -796,7 +817,7 @@
      "output_type": "stream",
      "text": [
       "Before memory usage of properties dataframe is : 5631.612686157227  MB\n",
-      "After memory usage of properties dataframe is : 3469.475672721863  MB\n"
+      "After memory usage of properties dataframe is : 3570.0401849746704  MB\n"
      ]
     }
    ],
@@ -807,7 +828,7 @@
     "dtype_dict = {'buyer_admin_id' : 'int32', \n",
     "              'item_id' : 'int32', \n",
     "              'store_id' : pd.Int32Dtype(),\n",
-    "              'irank' : 'int16',\n",
+    "              'irank' : 'int32',\n",
     "              'item_price' : float,\n",
     "              'cate_id' : pd.Int16Dtype(),\n",
     "              'is_train' : 'int8',\n",
@@ -1191,7 +1212,7 @@
        "      <th>mean</th>\n",
        "      <td>3.114219e+05</td>\n",
        "      <td>4.333457e+06</td>\n",
-       "      <td>2.557213e+02</td>\n",
+       "      <td>1.900171e+03</td>\n",
        "      <td>1.631748e-01</td>\n",
        "      <td>9.838060e-01</td>\n",
        "      <td>2.164609e+01</td>\n",
@@ -1204,7 +1225,7 @@
        "      <th>std</th>\n",
        "      <td>1.844761e+05</td>\n",
        "      <td>2.532043e+06</td>\n",
-       "      <td>3.213240e+03</td>\n",
+       "      <td>1.440366e+04</td>\n",
        "      <td>3.695250e-01</td>\n",
        "      <td>1.262211e-01</td>\n",
        "      <td>3.961407e+00</td>\n",
@@ -1217,7 +1238,7 @@
        "      <th>min</th>\n",
        "      <td>1.000000e+00</td>\n",
        "      <td>1.000000e+00</td>\n",
-       "      <td>-3.276800e+04</td>\n",
+       "      <td>1.000000e+00</td>\n",
        "      <td>0.000000e+00</td>\n",
        "      <td>0.000000e+00</td>\n",
        "      <td>1.600000e+01</td>\n",
@@ -1230,7 +1251,7 @@
        "      <th>25%</th>\n",
        "      <td>1.467390e+05</td>\n",
        "      <td>2.166051e+06</td>\n",
-       "      <td>2.200000e+01</td>\n",
+       "      <td>2.300000e+01</td>\n",
        "      <td>0.000000e+00</td>\n",
        "      <td>1.000000e+00</td>\n",
        "      <td>1.800000e+01</td>\n",
@@ -1243,7 +1264,7 @@
        "      <th>50%</th>\n",
        "      <td>3.128890e+05</td>\n",
        "      <td>4.211300e+06</td>\n",
-       "      <td>5.600000e+01</td>\n",
+       "      <td>5.800000e+01</td>\n",
        "      <td>0.000000e+00</td>\n",
        "      <td>1.000000e+00</td>\n",
        "      <td>2.100000e+01</td>\n",
@@ -1256,7 +1277,7 @@
        "      <th>75%</th>\n",
        "      <td>4.740970e+05</td>\n",
        "      <td>6.461643e+06</td>\n",
-       "      <td>1.420000e+02</td>\n",
+       "      <td>1.490000e+02</td>\n",
        "      <td>0.000000e+00</td>\n",
        "      <td>1.000000e+00</td>\n",
        "      <td>2.500000e+01</td>\n",
@@ -1269,7 +1290,7 @@
        "      <th>max</th>\n",
        "      <td>6.266450e+05</td>\n",
        "      <td>9.167200e+06</td>\n",
-       "      <td>3.276700e+04</td>\n",
+       "      <td>2.644730e+05</td>\n",
        "      <td>1.000000e+00</td>\n",
        "      <td>1.000000e+00</td>\n",
        "      <td>3.000000e+01</td>\n",
@@ -1285,13 +1306,13 @@
       "text/plain": [
        "       buyer_admin_id       item_id         irank      buy_flag      is_train  \\\n",
        "count    5.272477e+07  5.272477e+07  5.272477e+07  5.272477e+07  5.272477e+07   \n",
-       "mean     3.114219e+05  4.333457e+06  2.557213e+02  1.631748e-01  9.838060e-01   \n",
-       "std      1.844761e+05  2.532043e+06  3.213240e+03  3.695250e-01  1.262211e-01   \n",
-       "min      1.000000e+00  1.000000e+00 -3.276800e+04  0.000000e+00  0.000000e+00   \n",
-       "25%      1.467390e+05  2.166051e+06  2.200000e+01  0.000000e+00  1.000000e+00   \n",
-       "50%      3.128890e+05  4.211300e+06  5.600000e+01  0.000000e+00  1.000000e+00   \n",
-       "75%      4.740970e+05  6.461643e+06  1.420000e+02  0.000000e+00  1.000000e+00   \n",
-       "max      6.266450e+05  9.167200e+06  3.276700e+04  1.000000e+00  1.000000e+00   \n",
+       "mean     3.114219e+05  4.333457e+06  1.900171e+03  1.631748e-01  9.838060e-01   \n",
+       "std      1.844761e+05  2.532043e+06  1.440366e+04  3.695250e-01  1.262211e-01   \n",
+       "min      1.000000e+00  1.000000e+00  1.000000e+00  0.000000e+00  0.000000e+00   \n",
+       "25%      1.467390e+05  2.166051e+06  2.300000e+01  0.000000e+00  1.000000e+00   \n",
+       "50%      3.128890e+05  4.211300e+06  5.800000e+01  0.000000e+00  1.000000e+00   \n",
+       "75%      4.740970e+05  6.461643e+06  1.490000e+02  0.000000e+00  1.000000e+00   \n",
+       "max      6.266450e+05  9.167200e+06  2.644730e+05  1.000000e+00  1.000000e+00   \n",
        "\n",
        "                day          hour      cate_id      store_id    item_price  \n",
        "count  5.272477e+07  5.272477e+07   52628809.0    52628809.0  5.262881e+07  \n",
@@ -1322,7 +1343,7 @@
     {
      "data": {
       "text/plain": [
-       "-32768"
+       "1"
       ]
      },
      "execution_count": 30,
@@ -1343,18 +1364,18 @@
     {
      "data": {
       "text/plain": [
-       "8803892   -32768\n",
-       "5657204   -32768\n",
-       "3618399   -32768\n",
-       "354146    -32768\n",
-       "1387808   -32768\n",
-       "           ...  \n",
-       "8755071    32767\n",
-       "3294630    32767\n",
-       "5039742    32767\n",
-       "4969069    32767\n",
-       "3618400    32767\n",
-       "Name: irank, Length: 52724767, dtype: int16"
+       "9390006          1\n",
+       "24243250         1\n",
+       "6014981          1\n",
+       "34606239         1\n",
+       "47847804         1\n",
+       "             ...  \n",
+       "8848079     264469\n",
+       "8848078     264470\n",
+       "8848077     264471\n",
+       "8848076     264472\n",
+       "8848075     264473\n",
+       "Name: irank, Length: 52724767, dtype: int32"
       ]
      },
      "execution_count": 31,
@@ -5342,9 +5363,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "AntaiCup-VAR0c4pl",
    "language": "python",
-   "name": "python3"
+   "name": "antaicup-var0c4pl"
   },
   "language_info": {
    "codemirror_mode": {
@@ -5356,7 +5377,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
