--- a/code/eda.ipynb
+++ b/code/eda.ipynb
@@ -16,17 +16,20 @@
     "    \n",
     "[赛题目标](https://tianchi.aliyun.com/competition/entrance/231718/introduction)：通过用户历史订单数据，预测用户下一次购买的商品。\n",
     "\n",
-    "[赛题数据](https://tianchi.aliyun.com/competition/entrance/231718/information)：第一轮初赛共四个文件：训练数据(Antai_AE_round1_train_20190626.csv)、测试数据(Antai_AE_round1_test_20190626.csv)、商品信息(Antai_AE_round1_item_attr_20190626.csv)、提交示例(Antai_AE_round1_submit_20190715.csv)\n",
+    "[赛题数据](https://tianchi.aliyun.com/competition/entrance/231718/information)：共7个文件。\n",
+    "\n",
+    "第一轮初赛共4个文件：训练数据(Antai_AE_round1_train_20190626.csv)、测试数据(Antai_AE_round1_test_20190626.csv)、商品信息(Antai_AE_round1_item_attr_20190626.csv)、提交示例(Antai_AE_round1_submit_20190715.csv)\n",
+    "\n",
+    "第二轮复赛共3个文件：训练数据(Antai_AE_round2_train_20190813.csv)、测试数据(Antai_AE_round2_test_20190813.csv)、商品信息(Antai_AE_round2_item_attr_20190813.csv)\n",
     "\n",
     "1. 训练数据：用户每次购买的商品id，订单日期以及用户国家标识\n",
     "\n",
-    "2. 测试数据：较于训练数据，测试数据剔除了用户需要预测最后一次购买记录\n",
+    "2. 测试数据：较于训练数据，测试数据剔除了模型需要预测的最后一次用户购买记录\n",
     "\n",
     "3. 商品信息：商品id、品类id、店铺id和商品价格\n",
     "\n",
     "4. 提交示例：预测用户购买商品Top30的item_id依概率从高到低排序，buyer_admin_id,predict 1,predict 2,…,predict 30\n",
-    "\n",
-    "第二轮复赛共三个文件：训练数据(Antai_AE_round2_train_20190813.csv)、测试数据(Antai_AE_round2_test_20190813.csv)、商品信息(Antai_AE_round2_item_attr_20190813.csv)"
+    "\n"
    ]
   },
   {
