--- a/code/eda.ipynb
+++ b/code/eda.ipynb
@@ -11,12 +11,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "哈罗，各位 ~ 本文对[安泰杯 —— 跨境电商智能算法大赛](https://tianchi.aliyun.com/competition/entrance/231718/information)数据进行了初探与可视化处理，便于各位更为直观理解赛题数据与建模目标。 没有参加这个比赛的同学可能没有办法在天池这里下载到数据集，可以移步到这里下载：https://pan.baidu.com/s/18Z2mW8TFxwJvOWqmGXdPeg 提取码: iqrd\n",
+    "哈罗，各位 ~ 本文对[安泰杯 —— 跨境电商智能算法大赛](https://tianchi.aliyun.com/competition/entrance/231718/introduction)数据进行了初探与可视化处理，便于各位更为直观理解赛题数据与建模目标。 \n",
+    "\n",
+    "没有参加这个比赛的同学可能没有办法在天池这里下载到数据集，可以移步到这里下载：https://pan.baidu.com/s/18Z2mW8TFxwJvOWqmGXdPeg 提取码: iqrd\n",
     "\n",
     "    \n",
-    "[赛题目标](https://tianchi.aliyun.com/competition/entrance/231718/introduction)：通过用户历史订单数据，预测用户下一次购买的商品。\n",
+    "[赛题目标]：通过用户历史订单数据，预测用户下一次购买的商品。\n",
     "\n",
-    "[赛题数据](https://tianchi.aliyun.com/competition/entrance/231718/information)：共7个文件。\n",
+    "[赛题数据]：共7个文件。\n",
     "\n",
     "第一轮初赛共4个文件：训练数据(Antai_AE_round1_train_20190626.csv)、测试数据(Antai_AE_round1_test_20190626.csv)、商品信息(Antai_AE_round1_item_attr_20190626.csv)、提交示例(Antai_AE_round1_submit_20190715.csv)\n",
     "\n",
